Bug 672022 - Thunderbird 5 does not sort address columns correctly if showing only display name; r=Standard8